# rig-rag-system

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  dagger.json  test_mvp.rs  test_sample.md
.claude/: settings.local.json
.github/workflows/: ci.yml
dagger/: README.md  main.py
dagger/cue.mod/: module.cue
rag_mvp/: Cargo.toml  README.md
specs/001-enhanced-rag-system/: comprehensive-file-format-research.md  data-model.md  file-format-research-summary.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-enhanced-rag-system/contracts/: api.yaml
specs/002-advanced-rag-architecture/: architecture.md  detailed-tasks.md  implementation-plan.md  prioritization.md
src/: chunking.rs  evaluation.rs  lib.rs  main.rs  processor.rs  search.rs  storage.rs
