[package]
name = "rag_system"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_rag"
path = "test_mvp.rs"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }